# a11yhood-backend

./: .env.example  .env.test.example  .gitignore  Dockerfile  LICENSE  config.py  database_adapter.py  get_ravelry_token.py  get_ravelry_token_oauth2.py  main.py  make_admin.py  pyproject.toml  pytest.ini  refresh_ravelry_token.py  run-tests.sh  seed_oauth_configs.py  seed_scraper_search_terms.py  seed_supported_sources.py  seed_test_product.py  seed_test_users.py  start-dev.sh  start-prod.sh  stop-dev.sh  stop-prod.sh  supabase-schema.sql  test_ravelry_auth.py  test_scraper_api.py
documentation/: AGENT_GUIDE.md  API_REFERENCE.md  CODE_STANDARDS.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_PLAN.md  ENVIRONMENT_MODES.md  ENVIRONMENT_QUICK_REFERENCE.md  GITHUB_AUTH_SETUP.md  LOCAL_TESTING.md  PRD.md  README.md  SECURITY_BEST_PRACTICES.md  SECURITY_TESTING.md  SQLITE_MIGRATION_SUMMARY.md  TODOS.md
migrations/: 20251226_add_scraper_search_terms.sql  20251229_add_performance_indexes.sql  20251229_add_ratings_indexes.sql  20251230_add_product_updated_at_index.sql
models/: __init__.py  activities.py  blog_posts.py  collections.py  discussions.py  product_urls.py  products.py  ratings.py  reviews.py  scrapers.py  sources.py  users.py
routers/: __init__.py  activities.py  blog_posts.py  collections.py  discussions.py  product_urls.py  products.py  ratings.py  requests.py  reviews.py  scrapers.py  sources.py  users.py
scrapers/: __init__.py  abledata.py  base_scraper.py  github.py  ravelry.py  thingiverse.py
scripts/: make_admin.sh  start-prod.sh
seed_scripts/: seed_all.py  (+5 more)
(+26 files in other folders)
