[project]
name = "a11yhood-backend"
version = "0.1.0"
description = "a11yhood Backend API"
requires-python = ">=3.14"
dependencies = [
    "aiosqlite>=0.22.1",
    "annotated-doc>=0.0.4",
    "apscheduler>=3.10.0",
    "beautifulsoup4>=4.12.3",
    "bleach>=6.3.0",
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "lxml>=5.3.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.20",
    "requests>=2.32.3",
    "requests-oauthlib>=2.0.0",
    "slowapi>=0.1.9",
    "sqlalchemy>=2.0.0",
    "supabase>=2.27.0",
    "uvicorn[standard]>=0.35.0",
]

[tool.setuptools]
packages = ["models", "routers", "scrapers", "services", "migrations"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=0.24.0",
]
